# proj2

./: .gitignore  CMakeLists.txt  README.md  report.docx
frontend/: README.md  package-lock.json
frontend/.svelte-kit/: ambient.d.ts
frontend/.svelte-kit/output/client/.vite/: manifest.json
frontend/.svelte-kit/output/client/_app/: version.json
frontend/.svelte-kit/output/client/_app/immutable/chunks/: B2ZiByDX.js  CXITDCoY.js  CjtGcJ7u.js  CmZm-Iu7.js  DOyir5dO.js  bz2wIsNM.js
frontend/.svelte-kit/output/client/_app/immutable/entry/: app.ALx8vKbE.js  start.CloCHHFc.js
frontend/.svelte-kit/output/client/_app/immutable/nodes/: 0.DSYkXmRX.js  1.DhiuOrH8.js  2.lajpKF6N.js
frontend/.svelte-kit/output/server/: index.js  manifest-full.js
frontend/.svelte-kit/output/server/.vite/: manifest.json
frontend/.svelte-kit/output/server/chunks/: index.js  internal.js  root.js
frontend/.svelte-kit/output/server/entries/pages/: _page.svelte.js
frontend/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
frontend/src/routes/: +page.svelte
src/: Lab.cpp  Lab.h  display.cpp  display.h  hashtable.cpp  hashtable.h  main.cpp  n_ary.cpp  n_ary.h  randomGeneratedData.cpp  randomGeneratedData.h  result.cpp  result.h
